<resources>
    <string name="app_name">CycleApp</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_email2">Type your Email</string>
    <string name="type_your_password2">Type Your Password</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>
    <string name="start_renting">Start Renting</string>
    <string name="welcome_to_cycle_sawa">Welcome to Cycle Sawa!</string>
    <string name="todo">TODO</string>
    <string name="rent_a_bicycle_on_campus_at_an_affordable_fee">Rent a bicycle on campus at an affordable fee.</string>
    <string name="title_activity_renting">RentingActivity</string>
    <string name="title_activity_rides">RidesActivity</string>
    <string name="bicycle_description">Bicycle Description</string>
    <string name="cost_60_kes_hour">Cost: 60 KES/hour</string>
    <string name="rent">Rent</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="todo1">TODO</string>
    <string name="not_registered_yet_sign_up2">Not Registered Yet , Sign Up !</string>
    <string name="type_your_email1">Type your Email</string>
    <string name="type_your_password1">Type Your Password</string>
    <string name="sign_in1">Sign In</string>
    <string name="type_your_password3">Type Your Password</string>
    <string name="type_your_email3">Type your Email</string>
    <string name="retype_your_password3">Retype Your Password</string>
    <string name="sign_up3">Sign Up</string>
    <string name="already_registered_sign_in3">Already Registered , Sign In !</string>
</resources>