<?xml version="1.0" encoding="utf-8"?>
<!-- item_bicycle.xml -->
<!-- item_bicycle.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imageBicycle"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bicycle_description"
        android:textSize="16sp"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cost_60_kes_hour"
        android:textSize="14sp"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonRent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rent"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:background="@color/yellow" />
</LinearLayout>


<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent">-->

<!--</LinearLayout>-->